--- a/gh-pages/resources/style.css
+++ b/gh-pages/resources/style.css
@@ -6,7 +6,7 @@
 }
 
 img { box-sizing: border-box; }
-.screenshot { display:block; margin:5px auto; border:2px solid #202020; }
+.screenshot { display:block; margin:5px auto; border:2px solid #202020; max-width:100%; }
 .screenshot img { margin:0 }
 text img.screenshot { border:2px solid #00F080; }
 
@@ -19,6 +19,12 @@ header, section {
 
 header {
   margin: 0 0 20px 0;
+}
+
+a.h3 {
+  font-size:14pt;
+  display:block;
+  text-decoration:none;
 }
 
 section {
@@ -34,7 +40,7 @@ html,body {
   background-color:#202020;
 }
 
-h1,h2,h3,h4,h5,h6{
+h1,h2,h3,h4,h5,h6,a.h3{
   text-transform:uppercase;
   margin:10px 0 15px 0;
 }
