--- a/src/editor/ShortcutsDialog.ui
+++ b/src/editor/ShortcutsDialog.ui
@@ -155,6 +155,16 @@
        <string>New Row</string>
       </property>
      </row>
+     <row>
+      <property name="text">
+       <string>New Row</string>
+      </property>
+     </row>
+     <row>
+      <property name="text">
+       <string>New Row</string>
+      </property>
+     </row>
      <column>
       <property name="text">
        <string>Shortcut</string>
@@ -393,6 +403,26 @@
      <item row="22" column="1">
       <property name="text">
        <string>Toggle solo</string>
+      </property>
+     </item>
+     <item row="23" column="0">
+      <property name="text">
+       <string>J,L</string>
+      </property>
+     </item>
+     <item row="23" column="1">
+      <property name="text">
+       <string>Step forward / back (useful for MIDI input)</string>
+      </property>
+     </item>
+     <item row="24" column="0">
+      <property name="text">
+       <string>I,K</string>
+      </property>
+     </item>
+     <item row="24" column="1">
+      <property name="text">
+       <string>Increase / decrease step size (useful for MIDI)</string>
       </property>
      </item>
     </widget>
