--- a/src/editor/SettingsDialog.ui
+++ b/src/editor/SettingsDialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>351</width>
-    <height>327</height>
+    <width>332</width>
+    <height>394</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -15,70 +15,124 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <widget class="QCheckBox" name="customStyleCheck">
-     <property name="text">
-      <string>Use custom style</string>
+    <widget class="QTabWidget" name="tabWidget">
+     <property name="currentIndex">
+      <number>0</number>
      </property>
+     <widget class="QWidget" name="tab">
+      <attribute name="title">
+       <string>General</string>
+      </attribute>
+      <layout class="QVBoxLayout" name="verticalLayout_3">
+       <item>
+        <widget class="QCheckBox" name="customStyleCheck">
+         <property name="text">
+          <string>Use custom style (must restart)</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QCheckBox" name="chordPreviewCheck">
+         <property name="text">
+          <string>Preview with all units</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QCheckBox" name="pauseReseekCheck">
+         <property name="text">
+          <string>Spacebar stops instead of pauses</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QCheckBox" name="swapScrollOrientationCheck">
+         <property name="text">
+          <string>Swap vertical / horizontal scrolling</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QCheckBox" name="swapZoomOrientationCheck">
+         <property name="text">
+          <string>Swap vertical / horizontal zoom</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QCheckBox" name="velocityDragCheck">
+         <property name="text">
+          <string>Adjust velocity with vertical drag</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QCheckBox" name="autoAddUnitCheck">
+         <property name="text">
+          <string>Auto-add unit with each new voice</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QCheckBox" name="unitPreviewClickCheck">
+         <property name="text">
+          <string>Click on unit to preview voice</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <spacer name="verticalSpacer_2">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>40</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+      </layout>
+     </widget>
+     <widget class="QWidget" name="tab_2">
+      <attribute name="title">
+       <string>MIDI (WIP)</string>
+      </attribute>
+      <layout class="QVBoxLayout" name="verticalLayout_4">
+       <item>
+        <widget class="QLabel" name="label">
+         <property name="text">
+          <string>Input port</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QComboBox" name="midiInputPortCombo"/>
+       </item>
+       <item>
+        <widget class="QCheckBox" name="autoAdvanceCheck">
+         <property name="text">
+          <string>Auto-step on note input (Ctrl+L)</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <spacer name="verticalSpacer">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>40</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+      </layout>
+     </widget>
     </widget>
-   </item>
-   <item>
-    <widget class="QCheckBox" name="chordPreviewCheck">
-     <property name="text">
-      <string>Preview with all units</string>
-     </property>
-    </widget>
-   </item>
-   <item>
-    <widget class="QCheckBox" name="pauseReseekCheck">
-     <property name="text">
-      <string>Spacebar stops instead of pauses</string>
-     </property>
-    </widget>
-   </item>
-   <item>
-    <widget class="QCheckBox" name="swapScrollOrientationCheck">
-     <property name="text">
-      <string>Swap vertical / horizontal scrolling</string>
-     </property>
-    </widget>
-   </item>
-   <item>
-    <widget class="QCheckBox" name="swapZoomOrientationCheck">
-     <property name="text">
-      <string>Swap vertical / horizontal zoom</string>
-     </property>
-    </widget>
-   </item>
-   <item>
-    <widget class="QCheckBox" name="velocityDragCheck">
-     <property name="text">
-      <string>Adjust velocity with vertical drag</string>
-     </property>
-    </widget>
-   </item>
-   <item>
-    <widget class="QCheckBox" name="autoAddUnitCheck">
-     <property name="text">
-      <string>Auto-add unit with each new voice</string>
-     </property>
-    </widget>
-   </item>
-   <item>
-    <widget class="QCheckBox" name="unitPreviewClickCheck">
-     <property name="text">
-      <string>Click on unit to preview voice</string>
-     </property>
-    </widget>
-   </item>
-   <item>
-    <widget class="QLabel" name="label">
-     <property name="text">
-      <string>MIDI input port (work in progress)</string>
-     </property>
-    </widget>
-   </item>
-   <item>
-    <widget class="QComboBox" name="midiInputPortCombo"/>
    </item>
    <item>
     <widget class="QDialogButtonBox" name="buttonBox">
