--- a/src/editor/ShortcutsDialog.ui
+++ b/src/editor/ShortcutsDialog.ui
@@ -170,6 +170,11 @@
        <string>New Row</string>
       </property>
      </row>
+     <row>
+      <property name="text">
+       <string>New Row</string>
+      </property>
+     </row>
      <column>
       <property name="text">
        <string>Shortcut</string>
@@ -422,20 +427,30 @@
      </item>
      <item row="24" column="0">
       <property name="text">
-       <string>I,K</string>
+       <string>Ctrl+L</string>
       </property>
      </item>
      <item row="24" column="1">
       <property name="text">
-       <string>Increase / decrease step size (useful for MIDI)</string>
+       <string>Toggle auto-step forward on note input</string>
       </property>
      </item>
      <item row="25" column="0">
       <property name="text">
-       <string>Alt+Q</string>
+       <string>I,K</string>
       </property>
      </item>
      <item row="25" column="1">
+      <property name="text">
+       <string>Increase / decrease step size (useful for MIDI)</string>
+      </property>
+     </item>
+     <item row="26" column="0">
+      <property name="text">
+       <string>Alt+Q</string>
+      </property>
+     </item>
+     <item row="26" column="1">
       <property name="text">
        <string>Quantize selection (useful for MIDI)</string>
       </property>
