--- a/src/editor/EditorWindow.ui
+++ b/src/editor/EditorWindow.ui
@@ -54,6 +54,7 @@
     </property>
     <addaction name="actionIncrease_font_size"/>
     <addaction name="actionDecrease_font_size"/>
+    <addaction name="actionClean"/>
     <addaction name="actionOptions"/>
     <addaction name="actionClear_Settings"/>
    </widget>
@@ -188,6 +189,11 @@
   <action name="actionClear_Settings">
    <property name="text">
     <string>Clear Settings</string>
+   </property>
+  </action>
+  <action name="actionClean">
+   <property name="text">
+    <string>Clean units / voices</string>
    </property>
   </action>
  </widget>
