--- a/src/editor/RenderDialog.ui
+++ b/src/editor/RenderDialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>337</width>
-    <height>359</height>
+    <height>396</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -80,6 +80,16 @@
          <string>Fade out (s)</string>
         </property>
        </widget>
+      </item>
+      <item row="2" column="0">
+       <widget class="QLabel" name="label_5">
+        <property name="text">
+         <string>Volume</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="1">
+       <widget class="QLineEdit" name="volumeEdit"/>
       </item>
      </layout>
     </widget>
