update todo, midi header

--- a/src/editor/SettingsDialog.ui
+++ b/src/editor/SettingsDialog.ui
@@ -97,7 +97,7 @@
      </widget>
      <widget class="QWidget" name="tab_2">
       <attribute name="title">
-       <string>MIDI (WIP)</string>
+       <string>MIDI</string>
       </attribute>
       <layout class="QVBoxLayout" name="verticalLayout_4">
        <item>
