--- a/src/editor/EditorWindow.ui
+++ b/src/editor/EditorWindow.ui
@@ -24,7 +24,7 @@
      <x>0</x>
      <y>0</y>
      <width>863</width>
-     <height>21</height>
+     <height>27</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -54,6 +54,11 @@
     </property>
     <addaction name="actionIncrease_font_size"/>
     <addaction name="actionDecrease_font_size"/>
+    <addaction name="separator"/>
+    <addaction name="separator"/>
+    <addaction name="actionCopyOptions"/>
+    <addaction name="actionClean"/>
+    <addaction name="separator"/>
     <addaction name="actionOptions"/>
     <addaction name="actionClear_Settings"/>
    </widget>
@@ -190,9 +195,33 @@
     <string>Clear Settings</string>
    </property>
   </action>
-  <action name="actionRestart">
+  <action name="actionClean">
    <property name="text">
-    <string>Restart</string>
+    <string>Clean units / voices</string>
+   </property>
+  </action>
+  <action name="actionVelocity">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Velocity</string>
+   </property>
+  </action>
+  <action name="actionVoice">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Voice</string>
+   </property>
+  </action>
+  <action name="actionCopyOptions">
+   <property name="text">
+    <string>Copy options</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+Shift+C</string>
    </property>
   </action>
  </widget>
