--- a/src/editor/ShortcutsDialog.ui
+++ b/src/editor/ShortcutsDialog.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Shortcuts</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
@@ -133,6 +133,11 @@
      <row>
       <property name="text">
        <string/>
+      </property>
+     </row>
+     <row>
+      <property name="text">
+       <string>New Row</string>
       </property>
      </row>
      <row>
@@ -453,6 +458,16 @@
      <item row="26" column="1">
       <property name="text">
        <string>Quantize selection (useful for MIDI)</string>
+      </property>
+     </item>
+     <item row="27" column="0">
+      <property name="text">
+       <string>Ctrl+Shift+C</string>
+      </property>
+     </item>
+     <item row="27" column="1">
+      <property name="text">
+       <string>Toggle copy options dialog</string>
       </property>
      </item>
     </widget>
