--- a/src/editor/WelcomeDialog.ui
+++ b/src/editor/WelcomeDialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>335</width>
-    <height>164</height>
+    <width>404</width>
+    <height>198</height>
    </rect>
   </property>
   <property name="baseSize">
@@ -17,7 +17,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>pxtone collab</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
