setFixedSize in ui instead of code

--- a/src/editor/WelcomeDialog.ui
+++ b/src/editor/WelcomeDialog.ui
@@ -20,6 +20,9 @@
    <string>pxtone collab</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
+   <property name="sizeConstraint">
+    <enum>QLayout::SetFixedSize</enum>
+   </property>
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout_2">
      <item>
