--- a/src/editor/ShortcutsDialog.ui
+++ b/src/editor/ShortcutsDialog.ui
@@ -180,6 +180,11 @@
        <string>New Row</string>
       </property>
      </row>
+     <row>
+      <property name="text">
+       <string>New Row</string>
+      </property>
+     </row>
      <column>
       <property name="text">
        <string>Shortcut</string>
@@ -468,6 +473,16 @@
      <item row="27" column="1">
       <property name="text">
        <string>Toggle copy options dialog</string>
+      </property>
+     </item>
+     <item row="28" column="0">
+      <property name="text">
+       <string>Ctrl+Shift+(A/D)</string>
+      </property>
+     </item>
+     <item row="28" column="1">
+      <property name="text">
+       <string>(De)select all units</string>
       </property>
      </item>
     </widget>
