--- a/src/editor/ShortcutsDialog.ui
+++ b/src/editor/ShortcutsDialog.ui
@@ -185,6 +185,11 @@
        <string>New Row</string>
       </property>
      </row>
+     <row>
+      <property name="text">
+       <string>New Row</string>
+      </property>
+     </row>
      <column>
       <property name="text">
        <string>Shortcut</string>
@@ -483,6 +488,16 @@
      <item row="28" column="1">
       <property name="text">
        <string>(De)select all units</string>
+      </property>
+     </item>
+     <item row="29" column="0">
+      <property name="text">
+       <string>Ctrl+P</string>
+      </property>
+     </item>
+     <item row="29" column="1">
+      <property name="text">
+       <string>Toggle preview with all units</string>
       </property>
      </item>
     </widget>
