--- a/src/editor/ShortcutsDialog.ui
+++ b/src/editor/ShortcutsDialog.ui
@@ -190,6 +190,11 @@
        <string>New Row</string>
       </property>
      </row>
+     <row>
+      <property name="text">
+       <string>New Row</string>
+      </property>
+     </row>
      <column>
       <property name="text">
        <string>Shortcut</string>
@@ -498,6 +503,16 @@
      <item row="29" column="1">
       <property name="text">
        <string>Toggle preview with all units</string>
+      </property>
+     </item>
+     <item row="30" column="0">
+      <property name="text">
+       <string>Ctrl+(Shift)+(Left/Right)</string>
+      </property>
+     </item>
+     <item row="30" column="1">
+      <property name="text">
+       <string>Tweak selection</string>
       </property>
      </item>
     </widget>
