use png for icon since ico file doesn't seem to work on windows

--- a/src/icons.qrc
+++ b/src/icons.qrc
@@ -31,6 +31,7 @@
     </qresource>
     <qresource prefix="/images">
         <file alias="images">images.png</file>
+        <file alias="icon">big-icon.png</file>
     </qresource>
     <qresource prefix="/icons/color">
         <file alias="play">icons/color/play-icon.svg</file>
