--- a/src/editor/WelcomeDialog.ui
+++ b/src/editor/WelcomeDialog.ui
@@ -49,7 +49,7 @@
         <string/>
        </property>
        <property name="pixmap">
-        <pixmap resource="../icons.qrc">:/favicon/icon</pixmap>
+        <pixmap resource="../icons.qrc">:/images/icon</pixmap>
        </property>
       </widget>
      </item>
