--- a/src/style/ptCollage/ptCollage.qss
+++ b/src/style/ptCollage/ptCollage.qss
@@ -4,10 +4,10 @@ QPushButton, QLineEdit, QComboBox { padding: 2px 6px; }
 QLabel, QPushButton, QCheckBox { color: #D2CA9C; }
 QWindow, QDialog, QMainWindow { background: #4E4B61; }
 QMenu {
-	border: 2px transparent;
+	border: 1px transparent;
 	background-color: #837E78;
 	color: #00003E;
-	border-image: url("style/ptCollage/menu-border.png"), 2px 2px 2px 2px fill, stretch stretch;
+	border-image: url("style/ptCollage/menu-border.png") 1px fill;
 }
 QCheckBox { spacing: 5px; }
 QMenu::item:selected { background-color: #D2CA9C; }
@@ -41,7 +41,7 @@ QTableView QTableCornerButton::section {
 }
 QHeaderView { color: #4E4B61; }
 QMenuBar {
-	border-image: url("style/ptCollage/menubar-border.png"), 0px 0px 2px 0px fill, stretch stretch;
+	border-image: url("style/ptCollage/menubar-border.png") / 0px 0px 1px 0px fill / stretch stretch;
 	border-bottom: 2px transparent;
 }
 QMenuBar::item { padding: 4px 6px; }
@@ -89,8 +89,8 @@ QComboBox::drop-down {
 }
 QComboBox QAbstractItemView {
 	background-color: #9D9784;
-	border: 2px transparent;
-	border-image: url("style/ptCollage/menu-border.png"), 2px 2px 2px 2px fill, stretch stretch;
+	border: 1px transparent;
+	border-image: url("style/ptCollage/menu-border.png") 1px fill;
 	selection-background-color: #D2CA9C;
 }
 QCheckBox::indicator, QGroupBox::indicator, QTableView::indicator { border: 2px transparent; }
