--- a/src/editor/ShortcutsDialog.ui
+++ b/src/editor/ShortcutsDialog.ui
@@ -432,7 +432,7 @@
      </item>
      <item row="22" column="1">
       <property name="text">
-       <string>Toggle solo</string>
+       <string>Cycle solo (between current unit, selected units, all)</string>
       </property>
      </item>
      <item row="23" column="0">
