--- a/src/editor/NewWoiceDialog.ui
+++ b/src/editor/NewWoiceDialog.ui
@@ -59,6 +59,42 @@
         </widget>
        </item>
        <item>
+        <widget class="QGroupBox" name="groupBox_3">
+         <property name="title">
+          <string>Preview</string>
+         </property>
+         <layout class="QHBoxLayout" name="horizontalLayout_5" stretch="1,1,1,100">
+          <item>
+           <widget class="QLabel" name="label_7">
+            <property name="text">
+             <string>Key</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QLineEdit" name="previewKeyLine"/>
+          </item>
+          <item>
+           <widget class="QLabel" name="label_6">
+            <property name="text">
+             <string>Vol</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QSlider" name="previewVolSlider">
+            <property name="value">
+             <number>99</number>
+            </property>
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </widget>
+       </item>
+       <item>
         <widget class="QGroupBox" name="groupBox">
          <property name="title">
           <string>Search</string>
