--- a/src/editor/ShortcutsDialog.ui
+++ b/src/editor/ShortcutsDialog.ui
@@ -200,6 +200,11 @@
        <string>New Row</string>
       </property>
      </row>
+     <row>
+      <property name="text">
+       <string>New Row</string>
+      </property>
+     </row>
      <column>
       <property name="text">
        <string>Shortcut</string>
@@ -528,6 +533,16 @@
      <item row="31" column="1">
       <property name="text">
        <string>Tweak selection</string>
+      </property>
+     </item>
+     <item row="32" column="0">
+      <property name="text">
+       <string>(Shift)+N</string>
+      </property>
+     </item>
+     <item row="32" column="1">
+      <property name="text">
+       <string>New voice (unit)</string>
       </property>
      </item>
     </widget>
